@@ -1,3 +1,12 @@
+Thu Feb  6 16:43:33 2003  Jonathan Blandford  <jrb@redhat.com>
+
+	* gnome-settings-font.c (load_xcursor_theme): handle xcursor so
+	that we support Xcursor files.
+
+	* gnome-settings-daemon.c: move
+	gnome_settings_daemon_spawn_with_input here so multiple modules
+	can use it.
+
 Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>
 
 	* Release 2.2.0.1
